chore(styles): fixed spacing between link and overflow button

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -146,8 +146,9 @@ $fd-card-header-outline-offset: 0.0625rem !default;
       }
     }
 
-    &-link {
+    .#{$block}__footer-link {
       @include fd-ellipsis();
+      @include fd-set-margin-right(var(--fdCard_Footer_Actions_Item_Spacing));
 
       text-overflow: clip;
     }
